# bdg-rec

./: .gitignore  CMakeLists.txt  README.md  build-macos.sh  build-windows.bat
.github/workflows/: build.yml
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/BDG_REC_artefacts/JuceLibraryCode/: Info.txt
build-release/BDG_REC_artefacts/JuceLibraryCode/BDG_REC/: Info.plist
build-release/BDG_REC_artefacts/JuceLibraryCode/Release/: Defs.txt
build-release/BDG_REC_artefacts/Release/BDG REC.app/Contents/: Info.plist
build-release/juce_binarydata_BDG_REC_BinaryData/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  input_file_list
docs/superpowers/plans/: 2026-03-14-recording-safety-backup.md  2026-03-15-update-checker.md
docs/superpowers/specs/: 2026-03-14-recording-safety-backup.md  2026-03-15-update-checker-design.md
resources/: AppIcon.icns  LEIA-ME.template.txt  LEIA-ME.txt
src/: AnalyticsReporter.cpp  AnalyticsReporter.h  AudioEngine.cpp  AudioEngine.h  BdgColours.h  BdgLookAndFeel.cpp  BdgLookAndFeel.h  Dsp.cpp  Dsp.h  DspOverlay.cpp  DspOverlay.h  HeaderBar.cpp  HeaderBar.h  InlineWarning.h  InputPanel.cpp  InputPanel.h  Main.cpp  MainComponent.cpp  MainComponent.h  OutputPanel.cpp  OutputPanel.h  RecordButton.cpp  RecordButton.h  RecordingPanel.cpp  RecordingPanel.h  Strings.h  ToastComponent.cpp  ToastComponent.h  UpdateChecker.cpp  UpdateChecker.h  VuMeter.cpp  VuMeter.h  WaveformDisplay.cpp  WaveformDisplay.h
